[package]
name = "atsrevserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
actix-files = "0.6.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
polodb_core = "4.4.0"
md5 = "0.7.0"
chrono = "0.4.26"
